@@ -98,8 +98,8 @@ class Smarty_Internal_TemplateCompilerBase extends Smarty_Internal_Base {
     /**
     * Compile Tag
     * 
-    *                                             This is a call back from the lexer/parser
-    *                                             It executes the required compile plugin for the Smarty tag
+    *                                              This is a call back from the lexer/parser
+    *                                              It executes the required compile plugin for the Smarty tag
     * 
     * @param string $tag tag name
     * @param array $args array with tag attributes
@@ -180,6 +180,10 @@ class Smarty_Internal_TemplateCompilerBase extends Smarty_Internal_Base {
                 } 
                 // plugin ?
                 if (isset($this->smarty->registered_plugins[$base_tag]) && $this->smarty->registered_plugins[$base_tag][0] == 'block') {
+                    // check no cache
+                    if (!$this->smarty->registered_plugins[$base_tag][2]) {
+                        $this->tag_nocache = true;
+                    } 
                     return $this->block_plugin($args, $tag, $this);
                 } 
             } 
